--- a/app/views/jquery_ui/_second.html.erb
+++ b/app/views/jquery_ui/_second.html.erb
@@ -1,3 +1,2 @@
-<div id="jquery-ui-dialog2">
-  <input type="hidden" name="name" value="hoge">
-</div>
+<div>second</div>
+<div><%= @params %></div>
