--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-
+<%= javascript_include_tag 'jquery-ui' %>
+<%= stylesheet_link_tag 'jquery-ui-1.8.14.custom' %>
 <%= yield %>
 
 </body>
